--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
 		}
 	},
 	"require": {
-		"composer/installers": "~1.0",
-		"mwstake/mediawiki-component-commonuserinterface": "~2.0"
+		"composer/installers": "~1.0"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "31.0.0",
