--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		}
 	},
 	"require": {
-		"composer/installers": "~1.0"
+		"composer/installers": "~1.0",
+		"mwstake/mediawiki-component-contentprovisioner": "~1"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "31.0.0",
