--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
 		}
 	},
 	"require": {
-		"composer/installers": "~1.0",
+		"composer/installers": "~1.0|~2",
 		"mwstake/mediawiki-component-contentprovisioner": "~1"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "31.0.0",
-		"mediawiki/minus-x": "1.1.0",
-		"php-parallel-lint/php-console-highlighter": "0.5.0",
-		"php-parallel-lint/php-parallel-lint": "1.2.0"
+		"mediawiki/mediawiki-codesniffer": "39.0.0",
+		"mediawiki/minus-x": "1.1.1",
+		"php-parallel-lint/php-console-highlighter": "1.0.0",
+		"php-parallel-lint/php-parallel-lint": "1.3.2"
 	},
 	"scripts": {
 		"test": [
@@ -35,6 +35,11 @@
 	"autoload": {
 		"psr-4": {
 			"\\BlueSpice\\Installer\\Tests\\": "tests/phpunit"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
 		}
 	}
 }
